Fix app alert not centering on small screens

--- a/src/main.scss
+++ b/src/main.scss
@@ -534,6 +534,7 @@ html, body, #root {
 
     @include media-breakpoint-down(sm) {
         text-align: center;
+        margin-right: 0px;
     }
 }
 
